<resources>
    <string name="app_name">Brain Training</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="tv_game_true_false">True / False</string>
    <string name="tv_game_quick_math">Quick Math</string>
    <string name="tv_game_balance">Balance</string>
    <string name="tv_game_color_with_text">Color - Text</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="question">Question :&#160;</string>
    <string name="your_answer">Your answer :&#160;</string>
    <string name="correct_answer">Correct answer :&#160;</string>
    <string name="current_score">Score : </string>
    <string name="best_score">Best score :&#160; </string>
    <string name="equal">=</string>
    <string name="lessThan">&lt;</string>
    <string name="greaterThan">&gt;</string>
    <string name="greaterThanOrEqual">\u2265</string>
    <string name="lessThanOrEqual">\u2264</string >
</resources>
